--- a/main.css
+++ b/main.css
@@ -25,6 +25,25 @@ h1 {
     width: 100%;
     background-color: #BBB;
 }
+.effct {
+
+
+    height: 100%;
+    width: 100%;
+    background-color:  #1f1f1f;
+}
+.a{
+color:white;
+
+}
+.next{
+margin:-10px 0px 0px 0px;
+position:absolute;
+top:500px;
+left:30px
+
+
+}
 
 .welcome-screen {
     height: 100%;
@@ -68,7 +87,10 @@ h1 {
     font-size: 1.5rem;
     justify-content: center;
     align-items: center;
+	background-color: #282828;
 }
+
+
 
 .hidden {
     display: none;
@@ -91,6 +113,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .progress-wrapper span {
@@ -165,6 +188,7 @@ h1 {
 }
 .border {
     border: 3px solid red;
+	
 	}
 
 .song-length {
