--- a/main.css
+++ b/main.css
@@ -25,24 +25,30 @@ h1 {
     width: 100%;
     background-color: #BBB;
 }
+
 .effct {
 
-
-    height: 100%;
+    
     width: 100%;
     background-color:  #1f1f1f;
+	position:absolute;
+	top:160px;
 }
-.a{
-color:white;
 
-}
 .next{
 margin:-10px 0px 0px 0px;
 position:absolute;
-top:500px;
-left:30px
+top:60px;
+left:800px;
 
 
+
+}
+#back{
+margin:-10px 0px 0px 0px;
+position:absolute;
+top:-90px;
+left:60px;
 }
 
 .welcome-screen {
@@ -52,6 +58,10 @@ left:30px
     flex-direction: column;
     justify-content: center;
     align-items: center;
+	background:url("http://mytrak.com.au/wp-content/uploads/2017/05/6362123754763494391466194996_important_music.jpg");
+	color:white;
+	font-size:30px;
+	background-size:cover;
 }
 
 
